--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -75,6 +75,7 @@ html, body {
   background: #333;
   color: #fff;
   padding: 8px 12px;
+  border-radius: 5px;
   margin-right: 3px;
   margin-bottom: 3px;
   font-size: 13px;
